--- a/src/Encryption.Host/Views/Encryption/AsymmetricEncryption.cshtml
+++ b/src/Encryption.Host/Views/Encryption/AsymmetricEncryption.cshtml
@@ -23,11 +23,12 @@
                 <textarea class="form-control" rows="3" id="@Html.IdFor(m => m.EncryptedText)" name="@Html.NameFor(m => m.EncryptedText)">@Model.EncryptedText</textarea>
             </div>
         </div>
-        <div class="row">
-            <div class="form-group col" style="margin-top: 10px;">
-                <input type="password" class="form-control" asp-for="Password" value="@Model.Password" placeholder="Some random key">
+        <div class="row" style="margin-top: 10px;">
+            <div class="col form-group">
+                <label asp-for="Password">Private Key</label>
+                <textarea class="form-control" rows="3" id="@Html.IdFor(m => m.Password)" name="@Html.NameFor(m => m.Password)">@Model.Password</textarea>
             </div>
-            <div class="col" style="margin-top: 10px;">
+            <div class="col" style="margin-top: 24px;">
                 <select class="form-control" asp-for="Action" asp-items="actions"></select>
             </div>
         </div>
