--- a/src/Encryption.Host/Views/Encryption/SymmetricEncryption.cshtml
+++ b/src/Encryption.Host/Views/Encryption/SymmetricEncryption.cshtml
@@ -1,4 +1,4 @@
-@model Encryption.Host.Models.EncryptionViewModel
+@model Encryption.Host.Models.SymmetricViewModel
 
 @{
     ViewData["Title"] = "Symmetric Encryption";
