add validation for symmetric encryption

--- a/src/Encryption.Host/Views/Encryption/SymmetricEncryption.cshtml
+++ b/src/Encryption.Host/Views/Encryption/SymmetricEncryption.cshtml
@@ -12,6 +12,7 @@
 </div>
 
 <div class="container">
+    @Html.ValidationSummary()
     <form asp-controller="Encryption" asp-action="SymmetricEncryption">
         <div class="row">
             <div class="col form-group">
